# CPP-Workshop

adapter/: adapt-legacy-rectangle.cc  adapt-legacy-rectangle.hh  adapter-example.cc  legacy-rectangle.cc  legacy-rectangle.hh  rectangle.hh
autotools/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
autotools/autom4te.cache/: traces.0t
autotools/libhello/: hello.cc
bimap/: bimap.hh  bimap.hxx
builder/: builder.cc
cartesian_vector/: vector.cc
chain_of_responsibility/: director.cc  handler.cc  president.cc  vice-president.cc
closer_to/: closer-to.cc  closer-to.hh
cmake/: CMakeLists.txt  main.cc
color_manipulator/: termcolor.cc  termcolor.hh
const/: person.cc
constexpr_factorial/: constexpr_factorial.hh
counting_change/: counting-change.cc
directories_infos/: a.out  directory-info.hh  file.in  main-example.cc  read-info.cc  read-info.hh
do_not_loop/: dnl.cc
doubly_linked_list/: list.cc  node.cc
engine/: engine.cc  engine.hh  motor-cycle.cc  motor-cycle.hh  motor-truck.cc  motor-truck.hh  vehicle.cc  vehicle.hh
equal_pairs/: pair.hh
exception/: Makefile  game.cc  game.hh  invalid-argument.cc  invalid-argument.hh  main.cc  player.cc  player.hh
exist_functor/: exist.hh  exist.hxx
find_optional/: find-optional.cc
for_each/: for-each.hh
forward_multiplication/: forward-multiplication.cc  forward-multiplication.hh
game_theory/: lambdas.cc
implements/: implements.hh
int_container/: int-container.cc
is_numerical/: algorithm.cc  algorithm.hh  enable-if.hh  is-numerical.cc  template-specialization.cc
my_nfts/: nft.hh  (+3 more)
(+48 files in other folders)
