AC_PREREQ([2.71])
AC_INIT([hello], [1,0], [sara.bouamama@epita.fr])

#AC_CONFIG_SRCDIR([main.cc])
AC_CONFIG_AUX_DIR([build-aux])
#AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([subdir-objects foreign -Wall -Werror])

AC_PROG_CXX
AC_LANG([C++])

AM_PROG_AR
AC_PROG_RANLIB

AC_CONFIG_FILES([Makefile libhello/Makefile])
AC_OUTPUT
